homelessness p2 table spacing fix

--- a/_sass/homeless-analysis.scss
+++ b/_sass/homeless-analysis.scss
@@ -579,6 +579,11 @@
     padding: 0em 7em 0em 0em;
   }
 
+  #p2_3 >  #panel_coc > #coc_info > table{
+    margin: 0 0 1em 0;
+    background-color: inherit;
+  }
+
   #coc_info > table > tbody > tr{
     height:10px;
   }
